# fleetbox

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-postgres.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: __init__.py  audit.py  charts.py  cli.py  config.py  crypto.py  csrf.py  database.py  i18n.py  mailer.py  main.py  migrations.py  models.py  ratelimit.py  reminders.py  reports.py  security.py  stats.py  templating.py  totp.py
app/locales/: de.json  en.json
app/routers/: __init__.py  account.py  admin.py  attachments.py  auth.py  backup.py  dashboard.py  expenses.py  fuel.py  pwa.py  reports.py  search.py  service.py  stats.py  tires.py  vehicles.py
app/static/: offline.html
app/static/css/: classic.css  print.css  style.css
app/static/js/: app.js
app/templates/: base.html  dashboard.html  search.html
app/templates/account/: security.html  twofa_setup.html
app/templates/admin/: audit.html  (+2 more)
docs/: configuration.md  data-model.md  development.md  docker-step-by-step.md  i18n.md  installation.md  proxmox-step-by-step.html  proxmox-step-by-step.md  reverse-proxy.md  security.md
proxmox/: fleetbox-local.sh  fleetbox.sh
scripts/: install.sh  make_icons.py  update.sh  verify_e2e.py
tests/: conftest.py  test_admin_edit.py  test_app.py  test_attachments.py  test_backup.py  test_expenses.py  test_fuel.py  test_fuel_types.py  test_i18n.py  test_migrations.py  test_models.py  test_pwa.py  test_quick_add.py  test_readings.py  test_reminders.py  test_reports_pack.py  test_search.py  test_security_pack.py  test_security_pack2.py  test_security_pack3.py  test_service.py  test_skin.py  test_stats.py  test_theme.py  test_tires.py  test_usability.py  test_vehicle_photo.py
(+15 files in other folders)
